Updated error handling code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,14 @@
 </head>
 <body>
 <div class="container">
-<h1>Successfully connected to MongoDB.</h1>
+<h1>Successfully setup error routing.</h1>
+<p>
+  Trigger 404 error: <a href="/doesnotexit">Demonstrate</a>
+</p>
+
+<p>
+  Trigger 500 error: <a href="/givemea500">Demonstrate</a>
+</p>
 </div>
 </body>
 </html>
